Bug 1765652 - Fix early hints still preloading with parent controlled loads r=necko-reviewers,kershaw

Fixes early hint preloads always getting cancelled with
browser.tabs.documentchannel.parent-controlled set to true

Differential Revision: https://phabricator.services.mozilla.com/D147274